add style and some div in index.html

--- a/index.html
+++ b/index.html
@@ -6,14 +6,11 @@
 
   <body>
     <div id="navbar">
-      <p>gauche</p>
-      <p>milieu</p>
-      <p>droite</p>
+      <div id="logo-container">ezez</div>
+      <div id="pages-container">ezfzef</div>
     </div>
 
-    <div id="main">
-      <p>mainnnnnnnnn</p>
-    </div>
+    <div id="main"></div>
 
     <script src="script.js"></script>
   </body>
