--- a/index.html
+++ b/index.html
@@ -10,7 +10,27 @@
       <div id="pages-container">ezfzef</div>
     </div>
 
-    <div id="main"></div>
+    <div id="main">
+      <div id="header">
+        <h1>Explore the world effortlessly by train!</h1>
+        <h2>Compare, book and enjoy cheap prices for train tickets: your journey starts on Tickethack.</h2>
+      </div>
+
+      <div id="block-cards">
+        <div class="home-cards">
+          <div id="form">
+            <input type="text" name="Departure">
+            <input type="text" name="Arrival">
+          </div>
+          <div id="date">
+            <input type="date" name="date">
+          </div>
+          <button class="button"type="button">Search</button>
+        </div>
+        <div class="home-cards">RESULTS</div>
+      </div>
+    </div>
+      
 
     <script src="script.js"></script>
   </body>
