--- a/index.html
+++ b/index.html
@@ -6,31 +6,46 @@
 
   <body>
     <div id="navbar">
-      <div id="logo-container">ezez</div>
-      <div id="pages-container">ezfzef</div>
+      <div id="logo-container">
+        <h3>Tickethack</h3>
+      </div>
+      <div id="pages-container">
+        <p>Cart</p>
+        <p>Bookings</p>
+      </div>
     </div>
-
+    
     <div id="main">
       <div id="header">
         <h1>Explore the world effortlessly by train!</h1>
-        <h2>Compare, book and enjoy cheap prices for train tickets: your journey starts on Tickethack.</h2>
+        <h2>
+          Compare, book and enjoy cheap prices for train tickets: your journey
+          starts on Tickethack.
+        </h2>
       </div>
 
       <div id="block-cards">
         <div class="home-cards">
           <div id="form">
-            <input type="text" name="Departure">
-            <input type="text" name="Arrival">
+            <input type="text" name="Departure" />
+            <input type="text" name="Arrival" />
           </div>
           <div id="date">
-            <input type="date" name="date">
+            <input type="date" name="date" />
           </div>
-          <button class="button"type="button">Search</button>
+          <button class="button" type="button">Search</button>
         </div>
-        <div class="home-cards">RESULTS</div>
+
+        <div class="home-cards">
+          <div id="results">
+          <div id="img-home">
+            <img src="./images/train.png" />
+          </div>
+            <h3>It's time to book your future trip.</h3>
+          </div>
+        </div>
       </div>
     </div>
-      
 
     <script src="script.js"></script>
   </body>
