fix css and index

--- a/index.html
+++ b/index.html
@@ -7,28 +7,27 @@
   <body>
     <div id="navbar">
       <div id="logo-container">
-        <h3>Tickethack</h3>
+        <h3><a href="">Tickethack</a></h3>
       </div>
       <div id="pages-container">
-        <p>Cart</p>
-        <p>Bookings</p>
+        <p><a href="">Cart</a></p>
+        <!-- <p><a href="">Bookings</a></p> -->
       </div>
     </div>
-    
+
     <div id="main">
       <div id="header">
         <h1>Explore the world effortlessly by train!</h1>
         <h2>
-          Compare, book and enjoy cheap prices for train tickets: your journey
-          starts on Tickethack.
+          Compare, book and enjoy cheap prices for train tickets: your journey starts on Tickethack.
         </h2>
       </div>
 
       <div id="block-cards">
         <div class="home-cards">
           <div id="form">
-            <input type="text" name="Departure" />
-            <input type="text" name="Arrival" />
+            <input type="text" name="departure" placeholder="Departure" />
+            <input type="text" name="arrival" placeholder="Arrival" />
           </div>
           <div id="date">
             <input type="date" name="date" />
@@ -38,9 +37,8 @@
 
         <div class="home-cards">
           <div id="results">
-          <div id="img-home">
-            <img src="./images/train.png" />
-          </div>
+            <img src="./images/train.png" width="100px" height="100px" />
+            <div id="separator"></div>
             <h3>It's time to book your future trip.</h3>
           </div>
         </div>
