add logic for search

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       </div>
       <div id="pages-container">
         <p><a href="">Cart</a></p>
-        <!-- <p><a href="">Bookings</a></p> -->
+        <p><a href="">Bookings</a></p>
       </div>
     </div>
 
@@ -26,18 +26,24 @@
       <div id="block-cards">
         <div class="home-cards">
           <div id="form">
-            <input type="text" name="departure" placeholder="Departure" />
-            <input type="text" name="arrival" placeholder="Arrival" />
+            <input type="text" name="departure" id="departure" placeholder="Departure" />
+            <input type="text" name="arrival" id="arrival" placeholder="Arrival" />
           </div>
           <div id="date">
-            <input type="date" name="date" />
+            <input type="date" name="date" id="trip-date" />
           </div>
-          <button class="button" type="button">Search</button>
+          <button class="button" type="button" id="search">Search</button>
         </div>
 
-        <div class="home-cards">
+        <div class="home-cards list-trip">
           <div id="results">
-            <img src="./images/train.png" width="100px" height="100px" />
+            <!-- <div class="trip">
+              <div id="travel">Paris>Lyon</div>
+              <div id="hour">16:23</div>
+              <div id="price">126€</div>
+              <button class="book-button" type="button" id="book">Book</button>
+            </div> -->
+            <img id="img-search" src="./images/train.png" width="100px" height="100px" />
             <div id="separator"></div>
             <h3>It's time to book your future trip.</h3>
           </div>
