--- a/cart.html
+++ b/cart.html
@@ -19,10 +19,29 @@
     </div>
     <div id="main">
         <div id="cart-container">
-            <h4>No tickets in your cart.</h4>
-            <h4>Why not plan a trip?</h4>
-        </div>
+            <!--<h4>No tickets in your cart.</h4>
+            <h4>Why not plan a trip?</h4>-->
+          <h3>my Cart</h3>
+          <div class="travel">
+          <p class="description">description</p>
+          <p class="date">date</p>
+          <p class="price">price</p>
+          <button class="delete" type="button">X</button>
+          </div>
+          <div class="travel">
+            <p class="description">description</p>
+            <p class="date">date</p>
+            <p class="price">price</p>
+            <button class="delete" type="button">X</button>
+            </div>
+            <div class="travel">
+              <p class="description">description</p>
+              <p class="date">date</p>
+              <p class="price">price</p>
+              <button class="delete" type="button">X</button>
+              </div>
+                    </div>
     </div>
-    <script src="script.js"></script>
+    <script src="cart.js"></script>
 </body>
 </html>
