--- a/cart.html
+++ b/cart.html
@@ -1,13 +1,12 @@
 <!DOCTYPE html>
 <html lang="fr">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Cart</title>
     <link rel="stylesheet" href="cart.css" />
-</head>
-<body>
-    <body>
+  </head>
+  <body>
     <div id="navbar">
       <div id="logo-container">
         <h3>Tickethack</h3>
@@ -18,30 +17,13 @@
       </div>
     </div>
     <div id="main">
-        <div id="cart-container">
-            <!--<h4>No tickets in your cart.</h4>
-            <h4>Why not plan a trip?</h4>-->
-          <h3>my Cart</h3>
-          <div class="travel">
-          <p class="description">description</p>
-          <p class="date">date</p>
-          <p class="price">price</p>
-          <button class="delete" type="button">X</button>
-          </div>
-          <div class="travel">
-            <p class="description">description</p>
-            <p class="date">date</p>
-            <p class="price">price</p>
-            <button class="delete" type="button">X</button>
-            </div>
-            <div class="travel">
-              <p class="description">description</p>
-              <p class="date">date</p>
-              <p class="price">price</p>
-              <button class="delete" type="button">X</button>
-              </div>
-                    </div>
+      <div id="cart-container">
+        <div id="no-cart">
+          <h4>No tickets in your cart.</h4>
+          <h4>Why not plan a trip?</h4>
+        </div>
+      </div>
     </div>
     <script src="cart.js"></script>
-</body>
+  </body>
 </html>
