--- a/bookings.html
+++ b/bookings.html
@@ -18,11 +18,13 @@
       </div>
     </div>
     <div id="main">
+      <div id="no-booking">
+        <h4>No booking yet.</h4>
+        <h4>Why not plan a trip?</h4>
+      </div>
         <div id="booking-container">
-            <h4>No booking yet.</h4>
-            <h4>Why not plan a trip?</h4>
         </div>
     </div>
-    <script src="script.js"></script>
+    <script src="booking.js"></script>
 </body>
 </html>
