--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
   <body>
     <div id="navbar">
       <div id="logo-container">
-        <h3><a href="">Tickethack</a></h3>
+        <h3><a href="index.html">Tickethack</a></h3>
       </div>
       <div id="pages-container">
-        <p><a href="">Cart</a></p>
-        <p><a href="">Bookings</a></p>
+        <p><a href="cart.html">Cart</a></p>
+        <p><a href="bookings.html">Bookings</a></p>
       </div>
     </div>
 
@@ -37,12 +37,6 @@
 
         <div class="home-cards list-trip">
           <div id="results">
-            <!-- <div class="trip">
-              <div id="travel">Paris>Lyon</div>
-              <div id="hour">16:23</div>
-              <div id="price">126€</div>
-              <button class="book-button" type="button" id="book">Book</button>
-            </div> -->
             <img id="img-search" src="./images/train.png" width="100px" height="100px" />
             <div id="separator"></div>
             <h3>It's time to book your future trip.</h3>
