--- a/cart.html
+++ b/cart.html
@@ -9,11 +9,11 @@
   <body>
     <div id="navbar">
       <div id="logo-container">
-        <h3>Tickethack</h3>
+        <h3><a href="index.html">Tickethack</a></h3>
       </div>
       <div id="pages-container">
-        <p><a href="">Cart</a></p>
-        <p><a href="">Bookings</a></p>
+        <p><a href="cart.html">Cart</a></p>
+        <p><a href="bookings.html">Bookings</a></p>
       </div>
     </div>
     <div id="main">
